--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -27,9 +27,8 @@
             android:layout_marginTop="@dimen/marginTop"
             android:layout_marginEnd="@dimen/marginEnd"
             android:layout_marginBottom="@dimen/marginTop"
-            android:layout_weight="0.5"
             android:hint="@string/address1"
-            android:inputType="number"
+            android:inputType="textPostalAddress"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +39,6 @@
                 android:id="@+id/address1_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:layout_marginEnd="@dimen/marginEnd"
                 android:inputType="textMultiLine"
                 android:maxLines="3"
                 android:minLines="2"
@@ -64,18 +60,17 @@
             android:layout_marginBottom="@dimen/marginTop"
             android:layout_weight="0.5"
             android:hint="@string/address2"
-            android:inputType="number"
+            android:inputType="textPostalAddress"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/address1Layout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/address2_text_input"
-                android:layout_width="@dimen/formWidth"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
                 android:hint="@string/address2"
                 android:text="@={property.address.address2}"
                 android:textSize="@dimen/textSize" />
@@ -95,16 +90,14 @@
             android:inputType="number"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/address2Layout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/area_text_input"
-                android:layout_width="@dimen/formWidth"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:hint="@string/area"
                 android:inputType="text"
                 android:text="@={property.address.area}"
                 android:textSize="@dimen/textSize"
@@ -120,20 +113,18 @@
             android:layout_marginTop="@dimen/marginTop"
             android:layout_marginEnd="@dimen/marginEnd"
             android:layout_marginBottom="@dimen/marginTop"
-            android:layout_weight="0.5"
             android:hint="@string/city"
             android:inputType="number"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/areaLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/city_text_input"
-                android:layout_width="@dimen/formWidth"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
                 android:inputType="text"
                 android:text="@={property.address.city}"
                 android:textSize="@dimen/textSize"
@@ -165,8 +156,6 @@
                 android:id="@+id/state_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
                 android:inputType="textPostalAddress"
                 android:text="@={property.address.state}"
                 android:textSize="@dimen/textSize" />
@@ -194,12 +183,9 @@
                 android:id="@+id/zipcode_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
                 android:inputType="number"
                 android:text="@={Converter.intToString(zipcodeTextInput,property.address.zipCode,property.address.zipCode) }"
                 android:textSize="@dimen/textSize"
-
                 app:layout_constraintTop_toBottomOf="@id/city_text_input" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -224,10 +210,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/country_text_input"
-                android:layout_width="@dimen/formWidth"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
                 android:inputType="text"
                 android:text="@={property.address.country}"
                 android:textSize="@dimen/textSize" />
