--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -205,6 +205,7 @@
             android:inputType="number"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/zipcodeLayout">
 
