- update type_layout.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -145,7 +145,7 @@
             android:layout_marginBottom="@dimen/marginTop"
             android:layout_weight="0.5"
             android:hint="@string/state"
-            android:inputType="number"
+            android:inputType="text"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
@@ -202,7 +202,7 @@
             android:layout_marginBottom="@dimen/marginTop"
             android:layout_weight="0.5"
             android:hint="@string/country"
-            android:inputType="number"
+            android:inputType="text"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
