--- a/app/src/main/res/layout/type_layout.xml
+++ b/app/src/main/res/layout/type_layout.xml
@@ -22,6 +22,10 @@
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
             android:layout_marginEnd="@dimen/marginEnd"
+            android:hint="@string/select_a_property_type"
+            android:inputType="textAutoComplete"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_goneMarginEnd="@dimen/marginEnd">
@@ -30,7 +34,6 @@
                 android:id="@+id/type_dropdown"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/select_a_property_type"
                 android:inputType="textAutoComplete"
                 android:labelFor="@id/type_input_layout"
                 android:text="@{property.type.toString()}" />
