--- a/app/src/main/res/layout/media_layout.xml
+++ b/app/src/main/res/layout/media_layout.xml
@@ -12,6 +12,12 @@
         <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
+
+        <variable
+            name="photo"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Media.Photo" />
+
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +25,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/photosRecyclerView"
+            android:id="@+id/photo_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             android:layout_marginTop="16dp"
@@ -27,7 +33,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button_photo"
             tools:layoutManager="LinearLayoutManager"
-            app:items="@{property.media.photos}"
+            items="@{property.media.photos}"
             tools:listitem="@layout/media_item_content" />
 
         <Button
