- update address_layout.xml zipcode to String instead int
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -184,7 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="@={Converter.intToString(zipcodeTextInput,property.address.zipCode,property.address.zipCode) }"
+                android:text="@={property.address.zipCode }"
                 android:textSize="@dimen/textSize"
                 app:layout_constraintTop_toBottomOf="@id/city_text_input" />
 
