--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.MainActivity">
 
     <include layout="@layout/content_main" />
 
+
+    <com.nambimobile.widgets.efab.ExpandableFabLayout
+        android:id="@+id/expandable_fab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.nambimobile.widgets.efab.Overlay
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:overlay_orientation="portrait" />
+
+        <com.nambimobile.widgets.efab.ExpandableFab
+            android:id="@+id/expandable_fab_portrait"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:efab_orientation="portrait"
+            app:layout_anchor="@id/bottomAppBar" />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:id="@+id/fabAddProperty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_icon="@drawable/ic_house_24dp"
+            app:fab_orientation="portrait"
+            app:label_text="Add Property" />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:id="@+id/fabAddAgent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_icon="@drawable/ic_person_add_24dp"
+            app:fab_orientation="portrait"
+            app:label_text="Add Agent" />
+
+
+        <com.nambimobile.widgets.efab.Overlay
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:overlay_orientation="landscape" />
+
+        <com.nambimobile.widgets.efab.ExpandableFab
+            android:id="@+id/expandable_fab_landscape"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:efab_color="@color/colorAccent"
+            app:efab_orientation="landscape" />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_color="@color/colorAccent"
+            app:fab_icon="@drawable/ic_edit_24dp"
+            app:fab_orientation="landscape"
+            app:label_text="Unique Option 1 for Landscape!" />
+
+        <com.nambimobile.widgets.efab.FabOption
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_color="@color/colorAccent"
+            app:fab_icon="@drawable/ic_house_24dp"
+            app:fab_orientation="landscape"
+            app:label_text="Unique Option 2 for Landscape!" />
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:menu="@menu/bottom_app_bar"
+            app:navigationIcon="@drawable/ic_menu_24dp"
+            tools:ignore="BottomAppBar" />
+
+    </com.nambimobile.widgets.efab.ExpandableFabLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
