- update Property.kt id to string -propertyentity id is random uuid
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -71,7 +71,7 @@
         <argument
             android:name="propertyId"
             android:defaultValue=""
-            app:argType="String" />
+            app:argType="string" />
         <argument
             android:name="EDIT_PROPERTY_VIEW"
             android:defaultValue="false"
