--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
                 android:id="@+id/expandable_fab_portrait"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:efab_iconAnimationRotationDeg="0.0"
                 app:efab_orientation="portrait"
                 app:layout_anchor="@id/bottomAppBar" />
 
