--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -145,5 +145,8 @@
             android:name="AddAgentView"
             android:defaultValue="false"
             app:argType="boolean" />
+        <action
+            android:id="@+id/action_addAgentFragment_to_itemTabsFragment2"
+            app:destination="@id/itemTabsFragment2" />
     </fragment>
 </navigation>
