--- a/app/src/main/res/layout/description_layout.xml
+++ b/app/src/main/res/layout/description_layout.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="property"
-            type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
 
     </data>
 
@@ -26,7 +26,7 @@
             android:maxLength="512"
             android:scrollbars="vertical"
             android:scrollHorizontally="false"
-            android:text="@={property.description}"
+            android:text="@={viewModel.description}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintStart_toStartOf="parent"
