- update price_layout.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/price_layout.xml
+++ b/app/src/main/res/layout/price_layout.xml
@@ -8,9 +8,10 @@
 
         <import type="com.openclassrooms.realestatemanager.utils.converter.Converter" />
 
+
         <variable
-            name="property"
-            type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:inputType="number"
-                android:text="@{property.price == null ? `` : property.price }"
+                android:text="@{viewModel.price == null ? `` : viewModel.price }"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/baseline_attach_money_24" />
         </com.google.android.material.textfield.TextInputLayout>
