- update characteristics_layout.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -8,9 +8,10 @@
 
         <import type="com.openclassrooms.realestatemanager.utils.converter.Converter" />
 
+
         <variable
-            name="property"
-            type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:maxLength="4"
                 android:inputType="number"
-                android:text="@{property.surface == null ? `` : property.surface}"
+                android:text="@={viewModel.surface == null ? `` : viewModel.surface}"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_square_foot_24dp"
                 app:endIconMode="clear_text" />
@@ -67,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:inputType="number"
-                android:text="@{property.roomNumber == null ? `` : property.roomNumber}"
+                android:text="@={viewModel.roomNumber == null ? `` : viewModel.roomNumber}"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_room_24dp"
                 app:endIconMode="clear_text" />
@@ -97,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="@{property.bedroomNumber == null ? `` : property.bedroomNumber}"
+                android:text="@={viewModel.bedroomNumber == null ? `` : viewModel.bedroomNumber}"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_bedroom_parent_24dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -127,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:inputType="number"
-                android:text="@{property.bathroomNumber == null ? `` : property.bathroomNumber}"
+                android:text="@={viewModel.bathroomNumber == null ? `` : viewModel.bathroomNumber}"
                 android:textSize="@dimen/textSize"
                 app:drawableStartCompat="@drawable/ic_bathroom_24dp" />
         </com.google.android.material.textfield.TextInputLayout>
